[gd_scene load_steps=10 format=3 uid="uid://blre1p7ahayow"]

[ext_resource type="Script" uid="uid://dc7iao8d03il4" path="res://Actors/GodotPlayer/godot_player.gd" id="1_mpvt2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_khkku"]
albedo_color = Color(0, 0.78, 0.299, 1)

[sub_resource type="BoxMesh" id="BoxMesh_txnl2"]
material = SubResource("StandardMaterial3D_khkku")
size = Vector3(0.1, 1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_txnl2"]
albedo_color = Color(1, 0.257617, 0.399348, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7rcxy"]
material = SubResource("StandardMaterial3D_txnl2")
size = Vector3(1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7rcxy"]
albedo_color = Color(0.47715, 0.523519, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ncl1t"]
material = SubResource("StandardMaterial3D_7rcxy")
size = Vector3(0.1, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_icmh5"]
size = Vector3(1, 2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_khkku"]
size = Vector3(1, 2, 1)

[node name="GodotPlayer" type="CharacterBody3D"]
script = ExtResource("1_mpvt2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="PlayerCamera" type="Camera3D" parent="Head"]
current = true
fov = 90.0
near = 0.01

[node name="DebugFixedAxes" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, -2)
visible = false
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Head/DebugFixedAxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_txnl2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Head/DebugFixedAxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
mesh = SubResource("BoxMesh_7rcxy")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Head/DebugFixedAxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
mesh = SubResource("BoxMesh_ncl1t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_icmh5")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="DebugOut1" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 1280.0
offset_bottom = 720.0

[node name="GravityFucker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
top_level = true
metadata/_edit_group_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="GravityFucker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
mesh = SubResource("BoxMesh_txnl2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="GravityFucker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
visible = false
mesh = SubResource("BoxMesh_7rcxy")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="GravityFucker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
visible = false
mesh = SubResource("BoxMesh_ncl1t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("BoxMesh_khkku")
